// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<XUICompositionDetailSplit> renders basic example 1`] = `
<div
  className="xui-composition xui-composition-detailsplit xui-composition-is-finite"
>
  <div
    className="xui-gridarea-media"
  >
    <div />
  </div>
  <div
    className="xui-gridarea-main"
  >
    <div />
  </div>
</div>
`;

exports[`<XUICompositionDetailSplit> should do nothing with children 1`] = `
<div
  className="xui-composition xui-composition-detailsplit xui-composition-is-finite"
>
  <div
    className="xui-gridarea-media"
  >
    <div />
  </div>
  <div
    className="xui-gridarea-main"
  >
    <div />
  </div>
</div>
`;

exports[`<XUICompositionDetailSplit> should include custom class and omit width-limiting class, if specified 1`] = `
<div
  className="xui-composition xui-composition-detailsplit split-without-head"
>
  <div
    className="xui-gridarea-media"
  >
    <div />
  </div>
  <div
    className="xui-gridarea-main"
  >
    <div />
  </div>
</div>
`;
